@@ -1,105 +1,0 @@
-<?xml version="1.0"?>
-<ZopeData>
-  <record id="1" aka="AAAAAAAAAAE=">
-    <pickle>
-      <tuple>
-        <global name="ERP5TypeInformation" module="Products.ERP5Type.ERP5Type"/>
-        <tuple/>
-      </tuple>
-    </pickle>
-    <pickle>
-      <dictionary>
-        <item>
-            <key> <string>_actions</string> </key>
-            <value>
-              <tuple/>
-            </value>
-        </item>
-        <item>
-            <key> <string>_aliases</string> </key>
-            <value>
-              <dictionary/>
-            </value>
-        </item>
-        <item>
-            <key> <string>_roles</string> </key>
-            <value>
-              <list/>
-            </value>
-        </item>
-        <item>
-            <key> <string>acquire_local_roles</string> </key>
-            <value> <int>0</int> </value>
-        </item>
-        <item>
-            <key> <string>allowed_content_types</string> </key>
-            <value>
-              <tuple/>
-            </value>
-        </item>
-        <item>
-            <key> <string>base_category_list</string> </key>
-            <value>
-              <tuple/>
-            </value>
-        </item>
-        <item>
-            <key> <string>content_icon</string> </key>
-            <value> <string>document_icon.gif</string> </value>
-        </item>
-        <item>
-            <key> <string>content_meta_type</string> </key>
-            <value> <string>ERP5 SQL Cache</string> </value>
-        </item>
-        <item>
-            <key> <string>description</string> </key>
-            <value> <string>  SQLCache is a Zope (persistent) representation of \n
-  the RAM based real SQL cache plugin object.\n
-</string> </value>
-        </item>
-        <item>
-            <key> <string>factory</string> </key>
-            <value> <string>addSQLCache</string> </value>
-        </item>
-        <item>
-            <key> <string>filter_content_types</string> </key>
-            <value> <int>1</int> </value>
-        </item>
-        <item>
-            <key> <string>group_list</string> </key>
-            <value>
-              <tuple/>
-            </value>
-        </item>
-        <item>
-            <key> <string>hidden_content_type_list</string> </key>
-            <value>
-              <tuple/>
-            </value>
-        </item>
-        <item>
-            <key> <string>id</string> </key>
-            <value> <string>SQL Cache</string> </value>
-        </item>
-        <item>
-            <key> <string>init_script</string> </key>
-            <value> <string></string> </value>
-        </item>
-        <item>
-            <key> <string>permission</string> </key>
-            <value> <string></string> </value>
-        </item>
-        <item>
-            <key> <string>property_sheet_list</string> </key>
-            <value>
-              <tuple/>
-            </value>
-        </item>
-        <item>
-            <key> <string>title</string> </key>
-            <value> <string></string> </value>
-        </item>
-      </dictionary>
-    </pickle>
-  </record>
-</ZopeData>
